tests/errors/immutable_assignment.orus
fn main() {
    let x: i32 = 5
    x = 6
}
